k8s/test/fighter-manager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fighter-manager
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fighter-manager
  template:
    metadata:
      labels:
        app: fighter-manager
    spec:
      containers:
      - name: fighter-manager
        image: "us-central1-docker.pkg.dev/codejitsu/codejitsu-repo/fighter-manager:$SHORT_SHA"
        ports:
        - containerPort: 8080
        env:
        - name: ConnectionStrings__AppDb
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: SUPABASE_DB_CONNECTION
        - name: Jwt__Key
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: JWT_KEY
        - name: ASPNETCORE_ENVIRONMENT
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: ASPNETCORE_ENVIRONMENT
        - name: ASPNETCORE_SHOW_SWAGGER_IN_PRODUCTION
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: ASPNETCORE_SHOW_SWAGGER_IN_PRODUCTION
        - name: ASPNETCORE_APP_PORT
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: ASPNETCORE_APP_PORT_1
        - name: CLIENT_APP_PORTS
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: CLIENT_APP_PORTS
        - name: POSTGRES_PORT
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: POSTGRES_PORT
        - name: Jwt__Audience
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: Jwt__Audience
        - name: Jwt__Issuer
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: Jwt__Issuer
        - name: Jwt__Key
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: JWT_KEY
        - name: Authentication__Google__ClientId
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: GOOGLE_CLIENT_ID
        - name: Authentication__Google__ClientSecret
          valueFrom:
            secretKeyRef:
              name: app-secrets
              key: GOOGLE_CLIENT_SECRET
        - name: DOTNET_RUNNING_IN_CONTAINER
          valueFrom:
            configMapKeyRef:
              name: app-config
              key: DOTNET_RUNNING_IN_CONTAINER
        resources:
          requests:
            cpu: "25m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: fighter-manager
  namespace: test
spec:
  selector:
    app: fighter-manager
  ports:
  - port: 8080
    targetPort: 8080
  type: NodePort
