k8s/test/ingress-no-rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codejitsu-ingress-no-rewrite
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "video-analysis"
    nginx.ingress.kubernetes.io/client-header-buffer-size: "8k"
    nginx.ingress.kubernetes.io/large-client-header-buffers: "4 32k"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - thecodejitsu.com
      secretName: test-thecodejitsu-com-tls
  rules:
    - host: thecodejitsu.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fighter-manager
                port:
                  number: 7080
          - path: /swagger
            pathType: Prefix
            backend:
              service:
                name: fighter-manager
                port:
                  number: 7080
          - path: /signin-google-callback
            pathType: Exact
            backend:
              service:
                name: fighter-manager
                port:
                  number: 7080
          - path: /videoShareHub
            pathType: Prefix
            backend:
              service:
                name: video-analysis
                port:
                  number: 7081
          - path: /videoAnalysisHub
            pathType: Prefix
            backend:
              service:
                name: video-analysis
                port:
                  number: 7081
          - path: /hangfire
            pathType: Prefix
            backend:
              service:
                name: video-analysis
                port:
                  number: 7081
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
