k8s/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codejitsu-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/rewrite-target: /api/$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/websocket-services: "video-sharing"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: fighter-manager
                port:
                  number: 7080
          - path: /vid/api/(.*)
            pathType: Prefix
            backend:
              service:
                name: video-sharing
                port:
                  number: 7081
          - path: /pair/api/(.*)
            pathType: Prefix
            backend:
              service:
                name: match-maker
                port:
                  number: 7082
          - path: /videoShareHub
            pathType: Prefix
            backend:
              service:
                name: video-sharing
                port:
                  number: 7081
